<resources>
    <string name="app_name">myapp</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_hint">请输入账号</string>
    <string name="register_hint">请输入账号</string>
    <string name="login_hint_pw">请输入密码</string>
    <string name="register_hint_pw">请输入密码</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="collection_fragment">收藏</string>
    <string name="my_fragment">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">首页</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>